Adds footer and sticky nav bar

--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
         </head>
 
         <body>
-            <div class="container">
+            <div class="row main-image">
+                <nav class="navbar navbar-default navbar-fixed-top container">
 
-                <div class="row">
                     <div class="col-md-6">
-                        <header> <h1 class="text-left">Aaron Devon</h1></header>
+                        <h1 class="text-left">Aaron Devon</h1>
                     </div>
                     <div class="col-md-6">
-                        <nav>
+
                             <ul class="nav nav-pills pull-right">
                                 <li class="active"><a href="#">Projects</a></li>
                                 <li><a href="#">Profile</a></li>
                                 <li><a href="#">Messages</a></li>
                             </ul>
-                        </nav>
+
+                    </div>
+                </nav>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=100&txt=1200%C3%97400&w=1200&h=400" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="row">
@@ -33,26 +40,54 @@
                     </div>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-6">
-                        <img src="http://www.fillmurray.com/400/400" class="img-responsive" alt="">
+                    <div class="col-md-4">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
                     </div>
-                    <div class="col-md-6">
-                        <img src="http://www.fillmurray.com/400/400" class="img-responsive" alt="">
+                    <div class="col-md-4">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <img src="http://www.fillmurray.com/300/300" class="img-responsive" alt="">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
                     </div>
                     <div class="col-md-4">
-                        <img src="http://www.fillmurray.com/300/300" class="img-responsive" alt="">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
                     </div>
                     <div class="col-md-4">
-                        <img src="http://www.fillmurray.com/300/300" class="img-responsive" alt="">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=38&txt=400%C3%97200&w=400&h=200" class="img-responsive" alt="">
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>A bit about me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="https://placeholdit.imgix.net/~text?txtsize=19&txt=200%C3%97200&w=200&h=200" class="img-responsive" alt="">
+                    </div>
+                    <div class="col-md-8">
+                        <p>Praesent a ipsum eu ante ornare lacinia. Integer bibendum at enim efficitur rutrum. Etiam pharetra, quam quis sodales vulputate, nulla nulla vehicula nisl, ac vestibulum purus metus eget velit. Morbi cursus, lorem nec maximus fringilla, felis tortor viverra eros, consectetur vestibulum ante massa eu est. Nullam dictum sit amet magna sed viverra. Cras sit amet dictum orci. Suspendisse eu vestibulum lectus. Sed dictum tellus elementum lectus efficitur, non pretium massa venenatis. Ut nec ligula et risus venenatis accumsan. Maecenas eu vestibulum ex. Curabitur vitae eros sed tortor suscipit placerat. Vestibulum sed ipsum non massa ultricies imperdiet. Fusce maximus ultricies lobortis. Curabitur aliquam nulla nec neque feugiat vestibulum. Praesent nec lacinia nisl, ut auctor arcu.</p>
+                    </div>
+                </div>
+                    <div class="row">
+                        <footer>
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-3">
+                            </div>
+                        </footer>
+                    </div>
             </div>
-            <secttion>
+
 
         </body>
     </html>
