--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <img src="https://placeholdit.imgix.net/~text?txtsize=19&txt=200%C3%97200&w=200&h=200" class="img-responsive" alt="">
                         </div>
                         <div class="col-md-8">
-                            <p>Praesent a ipsum eu ante ornare lacinia. Integer bibendum at enim efficitur rutrum. Etiam pharetra, quam quis sodales vulputate, nulla nulla vehicula nisl, ac vestibulum purus metus eget velit. Morbi cursus, lorem nec maximus fringilla, felis tortor viverra eros, consectetur vestibulum ante massa eu est. Nullam dictum sit amet magna sed viverra. Cras sit amet dictum orci. Suspendisse eu vestibulum lectus. Sed dictum tellus elementum lectus efficitur, non pretium massa venenatis. Ut nec ligula et risus venenatis accumsan. Maecenas eu vestibulum ex. Curabitur vitae eros sed tortor suscipit placerat. Vestibulum sed ipsum non massa ultricies imperdiet. Fusce maximus ultricies lobortis. Curabitur aliquam nulla nec neque feugiat vestibulum. Praesent nec lacinia nisl, ut auctor arcu.</p>
+                            <p>I Started my coding journey in May of 2014 and haven't looked back since. I started off building a simple static page with some html and css. I can remember how frustrating it was to try to get the elements where I wanted them to be, and how rewarding it was when I finally figured it out. I eventually attended Prime Digital Academy to learn Full-stack development. However through this process I discover my true passion was in Front-end development. I have been working actively since July 2015 to improve my front-end skills.</p>
                         </div>
                     </div>
                 </div>
