Add hero image, updated boostrap breakpoints

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         </head>
 
         <body>
-            <div class="row main-image">
+            <div class="row navhead">
                 <nav class="navbar navbar-default navbar-fixed-top container">
-                    <div class="col-md-6">
-                        <h1 class="text-left"><a href="#">Aaron Devon</a></h1>
+                    <div class="logo col-xs-3 col-sm-6 col-md-4">
+                        <a href="#" class="text-left"><img src="images/logo1-2.png"></a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xs-9 col-sm-6 col-md-8">
                         <ul class="nav nav-pills pull-right">
                             <li class="active"><a href="#">Projects</a></li>
                             <li><a href="#">Profile</a></li>
@@ -27,53 +27,55 @@
                 </nav>
             </div>
             <main>
-                <div class="container">
-                    <div class="row">
+                <section class="container">
+                    <div class="row turts">
                         <div class="col-md-12">
-                            <img src="https://placeholdit.imgix.net/~text?txtsize=100&txt=1200%C3%97400&w=1200&h=400" class="img-responsive" alt="">
+                            <img src="images/turts.jpg" class="img-responsive" alt="Turtle on a gravel path">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3>Projects</h3>
+                    <section>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3>Projects</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="images/comingsoon.png" class="img-responsive text-center" alt="">
+                        <div class="row projects">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoon.png" class="img-responsive text-center" alt="">
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoonorange.png" class="img-responsive text-center" alt="">
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoon.png" class="img-responsive" alt="">
+                            </div>
+                        
+                        
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoonorange.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoon.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <img src="images/comingsoonorange.png" class="img-responsive" alt="">
+                            </div>
                         </div>
-                        <div class="col-md-4">
-                            <img src="images/comingsoonorange.png" class="img-responsive text-center" alt="">
+                    </section>
+                    <section>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3>A bit about me</h3>
+                            </div>
                         </div>
-                        <div class="col-md-4">
-                            <img src="images/comingsoon.png" class="img-responsive" alt="">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img src="images/me.jpeg" class="img-responsive picofme" alt="Picture of me">
+                                  <p>I Started my coding journey in May of 2014 and haven't looked back since. I started off building a simple static page with some html and css. I can remember how frustrating it was to try to get the elements where I wanted them to be, and how rewarding it was when I finally figured it out. I eventually attended Prime Digital Academy to learn Full-stack development. However through this process I discover my true passion was in Front-end development. I have been working actively since July 2015 to improve my front-end skills.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-md-4">
-                            <img src="images/comingsoonorange.png" class="img-responsive" alt="">
-                        </div>
-                        <div class="col-md-4">
-                            <img src="images/comingsoon.png" class="img-responsive" alt="">
-                        </div>
-                        <div class="col-md-4">
-                            <img src="images/comingsoonorange.png" class="img-responsive" alt="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3>A bit about me</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://placeholdit.imgix.net/~text?txtsize=19&txt=200%C3%97200&w=200&h=200" class="img-responsive" alt="">
-                        </div>
-                        <div class="col-md-8">
-                            <p>I Started my coding journey in May of 2014 and haven't looked back since. I started off building a simple static page with some html and css. I can remember how frustrating it was to try to get the elements where I wanted them to be, and how rewarding it was when I finally figured it out. I eventually attended Prime Digital Academy to learn Full-stack development. However through this process I discover my true passion was in Front-end development. I have been working actively since July 2015 to improve my front-end skills.</p>
-                        </div>
-                    </div>
-                </div>
+                    </section>
+                </section>
             </main>
             <div class="container">
                 <div class="row">
