--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
                         </div>
                         <div class="row projects">
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoon.png" class="img-responsive text-center" alt="">
+                                <img src="images/comingsoon.png" class="img-responsive text-center" alt="Project 1">
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoonorange.png" class="img-responsive text-center" alt="">
+                                <img src="images/comingsoonorange.png" class="img-responsive text-center" alt="Project 2">
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoon.png" class="img-responsive" alt="">
+                                <img src="images/comingsoon.png" class="img-responsive" alt="Project 3">
                             </div>
                         
                         
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoonorange.png" class="img-responsive" alt="">
+                                <img src="images/comingsoonorange.png" class="img-responsive" alt="Project 4">
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoon.png" class="img-responsive" alt="">
+                                <img src="images/comingsoon.png" class="img-responsive" alt="Project 5">
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <img src="images/comingsoonorange.png" class="img-responsive" alt="">
+                                <img src="images/comingsoonorange.png" class="img-responsive" alt="Project 6">
                             </div>
                         </div>
                     </section>
@@ -72,7 +72,7 @@
                             <div class="col-md-12">
                                 <img src="images/me.jpeg" class="img-responsive picofme" alt="Picture of me">
                             </div>
-                            <div>
+                            <div class="aboutme">
                                 <div class="col-md-12">
                                     <p>I Started my coding journey in May of 2014 and haven't looked back since. I started off building a simple static page with some html and css. I can remember how frustrating it was to try to get the elements where I wanted them to be, and how rewarding it was when I finally figured it out. I eventually attended Prime Digital Academy to learn Full-stack development. However through this process I discover my true passion was in Front-end development. I have been working actively since July 2015 to improve my front-end skills.</p>
                                 </div>
