Add space between css rules, no longer use html element as css selectors

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <body>
             <nav class="navbar navbar-default navbar-fixed-top container">
                 <div class="row navhead">
-                    <div class="logo col-xs-3 col-sm-6 col-md-4">
-                        <a href="#" class="text-left"><img src="images/logo1-2.png"></a>
+                    <div class="col-xs-3 col-sm-6 col-md-4">
+                        <a href="#" class="text-left"><img src="images/logo1-2.png" class="logo"></a>
                     </div>
                     <div class="col-xs-9 col-sm-6 col-md-8">
                         <ul class="nav nav-pills pull-right">
@@ -28,9 +28,9 @@
             </nav>
             <main>
                 <section class="container">
-                    <div class="row turts">
+                    <div class="row hero">
                         <div class="col-md-12">
-                            <img src="images/turts.jpg" class="img-responsive" alt="Turtle on a gravel path">
+                            <img src="images/turts.jpg" class="img-responsive turts" alt="Turtle on a gravel path">
                         </div>
                     </div>
                     <section>
