Add hyphen to class names for readability

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <img src="images/me.jpeg" class="img-responsive picofme" alt="Picture of me">
+                                <img src="images/me.jpeg" class="img-responsive pic-of-me" alt="Picture of me">
                             </div>
-                            <div class="aboutme">
+                            <div class="about-me">
                                 <div class="col-md-12">
                                     <p>I Started my coding journey in May of 2014 and haven't looked back since. I started off building a simple static page with some html and css. I can remember how frustrating it was to try to get the elements where I wanted them to be, and how rewarding it was when I finally figured it out. I eventually attended Prime Digital Academy to learn Full-stack development. However through this process I discover my true passion was in Front-end development. I have been working actively since July 2015 to improve my front-end skills.</p>
                                 </div>
